# psycho-i

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  noxfile.py  psycho.py  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: conf.py  data_saver.rst  eos.rst  index.rst  input.rst  kh.rst  mesh.rst  modules.rst  plotter.rst  reconstruct.rst  requirements.txt  riemann.rst  sample.rst  tools.rst
inputs/: kh.in  sample.in  spatial_convergence.in  temp_convergence.in
misc/: kh_test.mov  single_timestep_instructions.md
plotting/: plotter.py  sample_u.txt  sample_v.txt
src/: data-saver.py  data_saver.py  eos.py  input.py  mesh.py  reconstruct.py  riemann.py  tools.py
src/pgen/: kh.py  sample.py
tests/: test_.py  tests.py
workflow/: environment.yaml
